--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,1 +1,9 @@
-<p>login works!</p>
+<div class="container mt-5">
+  <h2>Login</h2>
+  <form (ngSubmit)="login()">
+    <input [(ngModel)]="username" name="username" placeholder="Username" class="form-control mb-2" required>
+    <input [(ngModel)]="password" name="password" type="password" placeholder="Password" class="form-control mb-2" required>
+    <button type="submit" class="btn btn-primary">Login</button>
+  </form>
+  <p *ngIf="errorMessage" class="text-danger mt-2">{{ errorMessage }}</p>
+</div>
