--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,7 +4,19 @@
     <a class="navbar-brand" href="#">Assignment</a>
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item">
+        <a class="nav-link" routerLink="/dashboard">Dashboard</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/profile">Profile</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/userManagement">User Management</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/groupManagement">Group Management</a>
       </li>
     </ul>
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
