added update roles, added and edited json files, started admin notifications, removed super delete profile

--- a/src/app/components/profile/profile.html
+++ b/src/app/components/profile/profile.html
@@ -1,2 +1,2 @@
 <p>profile works!</p>
-<button (click)="deleteAccount()" class="btn btn-danger">Delete Account</button>
+<button *ngIf="user.username !== 'super'"(click)="deleteAccount()" class="btn btn-danger">Delete Account</button>
