--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,16 +10,19 @@
         <a *ngIf="user" class="nav-link" routerLink="/dashboard">Dashboard</a>
       </li>
       <li class="nav-item">
-        <a *ngIf="user && (user.roles?.includes('SuperAdmin') || user.roles?.includes('GroupAdmin'))" class="nav-link" routerLink="/userManagement">User Management</a>
+        <a *ngIf="user && (user.role === 'SuperAdmin')" class="nav-link" routerLink="/userManagement">User Management</a>
       </li>
       <li class="nav-item">
-        <a *ngIf="user && (user.roles?.includes('SuperAdmin') || user.roles?.includes('GroupAdmin'))" class="nav-link" routerLink="/groupManagement">Group Management</a>
+        <a *ngIf="user && (user.role === 'SuperAdmin' || user.role === 'GroupAdmin')" class="nav-link" routerLink="/groupManagement">Group Management</a>
       </li>
     </ul>
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
       <li class="nav-item d-flex align-items-center">
         <span *ngIf="user" class="navbar-text text-light fw-semibold me-2 px-2 py-1 rounded bg-secondary">
           {{ user?.username }}
+        </span>
+        <span *ngIf="user" class="navbar-text text-light fw-semibold me-2 px-2 py-1 rounded bg-success">
+          You are a {{ user?.role }}
         </span>
         <a *ngIf="user" class="nav-link btn btn-outline-light ms-2 px-3 py-1" (click)="logout()">Logout</a>
         <span *ngIf="!user" class="nav-link btn btn-outline-light px-3 py-1" routerLink="/login">Login</span>
