--- a/src/app/components/user-management/user-management.html
+++ b/src/app/components/user-management/user-management.html
@@ -19,3 +19,15 @@
 </ul>
 <br><br>
 <h2>User Notifications</h2>
+<ul class="list-group">
+    <li *ngFor="let notification of notifications" class="list-group-item d-flex justify-content-between align-items-center">
+        <span class="fs-6">{{ notification.Description }}</span>
+        <span class="ms-auto d-flex align-items-center">
+            <span class="me-3">Reason for Ban: {{ notification.Reason }}</span>
+            <button class="btn btn-danger btn-sm" (click)="deleteNotification(notification)">Delete</button>
+        </span>
+    </li>
+    <li *ngIf="!notifications || notifications.length === 0" class="list-group-item d-flex justify-content-between align-items-center">
+        <span>No new notifications</span>
+    </li>
+</ul>
