--- a/src/app/app.html
+++ b/src/app/app.html
@@ -10,10 +10,10 @@
         <a *ngIf="user" class="nav-link" routerLink="/dashboard">Dashboard</a>
       </li>
       <li class="nav-item">
-        <a *ngIf="user && (user.role === 'SuperAdmin')" class="nav-link" routerLink="/userManagement">User Management</a>
+        <a *ngIf="user" class="nav-link" routerLink="/groupManagement">Group Management</a>
       </li>
       <li class="nav-item">
-        <a *ngIf="user && (user.role === 'SuperAdmin' || user.role === 'GroupAdmin')" class="nav-link" routerLink="/groupManagement">Group Management</a>
+        <a *ngIf="user && (user.role === 'SuperAdmin')" class="nav-link" routerLink="/userManagement">User Management</a>
       </li>
     </ul>
     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
