--- a/src/app/components/profile/profile.html
+++ b/src/app/components/profile/profile.html
@@ -1,2 +1,2 @@
-<p>profile works!</p>
+<p>profile image upload will go here</p>
 <button *ngIf="user.username !== 'super'"(click)="deleteAccount()" class="btn btn-danger">Delete Account</button>
